Se completa traduccion al español de version latex

--- a/Spanish.tex
+++ b/Spanish.tex
@@ -1,5 +1,34 @@
 \documentclass{article}
-\usepackage{hyperref}       % Paquete para hipervínculos
+\usepackage[
+    pdftex,
+    pdfauthor={Jorge C. Henríquez Tolhuysen},
+    pdftitle={Curriculum Vitae de Jorge C. Henríquez Tolhuysen},
+    pdfsubject={Curriculum Vitae},
+    pdfkeywords={
+        Curriculum Vitae, 
+        Jorge Henríquez, 
+        Estudios, 
+        Experiencia,
+        Sistemas Desarrollados, 
+        Java, 
+        Visual Basic 6.0, 
+        Visual Basic .Net, 
+        C\#, 
+        Php,
+        Threejs, 
+        Javascript, 
+        Typescript, 
+        Tailwindcss,
+        Html,
+        Css,
+        Json,
+        Svg,
+        Dwg,
+        Bim,
+    },
+    pdfproducer={Latex con hyperref},
+    pdfcreator={pdflatex}
+]{hyperref}                 % Paquete para hipervínculos
 \usepackage[T1]{fontenc}    % Set the font (output) encodings
 \usepackage{tgbonum}
 \usepackage[spanish]{babel} % Spanish-specific commands
@@ -10,11 +39,11 @@
     nomarginpar,            % We don't want any margin paragraphs
     textwidth=18cm,         % Set \textwidth to 10cm
     textheight=21.5cm,
-    headheight=83.9pt,        % Set \headheight to 10mm
+    headheight=87.93pt,      % Set \headheight to 83.9 pt
 ]{geometry}
 \usepackage{xcolor}
 \usepackage{fancyhdr}
-\author{Jorge C. Henriquez Tolhuysen}
+\author{Jorge C. Henríquez Tolhuysen}
 \date{\today}
 \begin{document}
 \pagestyle{fancy}           % Set the page style to "fancy"...
@@ -24,7 +53,7 @@
         \parbox{0.98\headwidth}{
             \centering
             \vspace{2mm}
-            \textbf{\LARGE{JORGE CRISTIAN HENRIQUEZ TOLHUYSEN}}\\
+            \textbf{\LARGE{JORGE CRISTIAN HENRÍQUEZ TOLHUYSEN}}\\
             \vspace{2mm}
             \hrule height 2pt
             \vspace{2mm}
@@ -40,13 +69,13 @@
 }
 \fancyfoot{}              % clear all footer fields
 \fancyfoot[R]{\thepage}.  % footer for the right side
-\fancyfoot[L]{Jorge Henquez Tolhuysen, \today, made with \LaTeX} % footer for the left side
+\fancyfoot[L]{Jorge Henríquez Tolhuysen, \today, creado con \LaTeX} % footer for the left side
 
 \section{Estudios/Educación}
 \label{sec:estudios-section}
 \begin{itemize}
     \item Desde 1989 al 1994, \textbf{Ingeniería Electrónica}, título obtenido en la \href{https://www.usm.cl}{\textbf{Universidad Técnica Federico Santa María}} en Valparaiso, Chile, Ayudante para las asignaturas de Programación de Computadores en Pascal y Telefonía.
-    \item Desde 2013 al 2016, \textbf{Contabilidad y Auditoria}, Todas las asignaturas aprobadas, sin titulación, en la \href{https://www.inacap.cl}{\textbf{Universidad Tecnológica de Chile INACAP}}, dos años consecutivos reconocido como el mejor estudiante del área de administración y negocios.
+    \item Desde 2013 al 2016, \textbf{Contabilidad y Auditoría}, Todas las asignaturas aprobadas, sin titulación, práctica profesional realizada fuera de plazo, en la \href{https://www.inacap.cl}{\textbf{Universidad Tecnológica de Chile INACAP}}, dos años consecutivos reconocido como el mejor estudiante del área de administración y negocios.
 \end{itemize}
 
 \section{Certificaciones}
@@ -62,7 +91,7 @@
     \begin{description}
         \item[Tecnologías relacionadas:] \textit{Visual Studio Code, Php, Javascript, Typescript, Tailwindcss, Threejs.}
     \end{description}
-    \item Desde 2021 al 2025, en \textbf{ALVAREZ \& ASOCIADOS SpA} como Consultor Independiente, Construyó una aplicación para el Escritorio de Windows, escrita en C\#, que hace web scraping de un ERP y genera salidas de Balances y Estados de Resultados en pantalla y archivos Excel.
+    \item Desde 2021 al 2025, en \textbf{ALVAREZ \& ASOCIADOS S.p.A.} como Consultor Independiente, Construyó una aplicación para el Escritorio de Windows, escrita en C\#, que hace web scraping de un ERP y genera salidas de Balances y Estados de Resultados en pantalla y archivos Excel.
     \begin{description}
         \item[Tecnologías relacionadas:] \textit{Visual Studio Professional 2022, Webscraping, C\#.}
     \end{description}
@@ -70,19 +99,18 @@
     \begin{description} 
         \item[Tecnologías relacionadas:] \textit{Visual Studio Professional 2022, Integración con Excel, C\#}.
     \end{description}
-    \item Desde 2021 al 2024, en \href{https://www.khipu.com}{\textbf{KHIPU SpA}} como Ingeniero de Software Senior en area backend.
+    \item Desde 2021 al 2024, en \href{https://www.khipu.com}{\textbf{KHIPU S.p.A.}} como Ingeniero de Software Senior en area backend.
     \begin{description} 
         \item[Tecnologías relacionadas:] \textit{IntelliJ, Java, Postgresql, Bitbucket, Git, Terraform, IBM Cloud, Docker.}
     \end{description}
-    \item Desde 2019 al 2021, en \href{https://www.comciencia.cl/}{\textbf{COMCIENCIA INFORMÁTICA SpA}} como Desarrollador Full Stack Senior, para el software \href{https://www.s-verein.de/}{S-Verein}, COMCIENCIA es una Compañia con Base en Chile de propiedad Alemana. 
+    \item Desde 2019 al 2021, en \href{https://www.comciencia.cl/}{\textbf{COMCIENCIA INFORMÁTICA S.p.A.}} como Desarrollador Full Stack Senior, para el software \href{https://www.s-verein.de/}{S-Verein}, COMCIENCIA es una Compañia con Base en Chile de propiedad Alemana. 
     \begin{description} 
         \item[Tecnologías relacionadas:] \textit{Php, Oracle DB, Mysql DB, Maria DB, PhpStorm, Youtrack, Svn, Git, Linux, Aws.}
     \end{description}
-    \item Desde 2010 al 2019, en \textbf{SERVIMAQ SA} como Consultor Independiente, Configurando y Administrando Windows Server y SQL Server. Administrando Firewall Watchguard y Desarrollando Software.
+    \item Desde 2010 al 2019, en \textbf{SERVIMAQ S.A.} como Consultor Independiente, Configurando y Administrando Windows Server y SQL Server. Administrando Firewall Watchguard y Desarrollando Software.
     \begin{description} 
         \item[Tecnologías relacionadas:] \textit{Windows Server, Ms Sql Server, Firewall Watchguard, Genexus, Visual Basic .NET, Java}
     \end{description}
-    \newpage
     \item Desde 2003 al 2025, en \href{https://trucaoberries.com/es/inicio/}{\textbf{TRUCAO BERRIES}} como Consultor Independiente, Configurando y Administrando Windows Server, SQL Server y Softland Erp. Administrando Firewall Watchguard. Desarrollando Software.
     \begin{description} 
         \item[Tecnologías relacionadas:] \textit{Windows Server, Ms Sql Server, Softland Erp, Firewall Watchguard, Visual Studio Professional, Visual Basic .NET, Android Studio, Java}.
@@ -91,36 +119,87 @@
     \begin{description} 
         \item[Tecnologías relacionadas:] \textit{Windows Server, Ms Sql Server, Firewall Watchguard, Firewall Fortinet.}
     \end{description}
-    \item Desde 2016 al 2017, en \href{https://www.liceoraac.cl}{\textbf{LICEO RAAC}} como Profesor para las asignaturas de Redes y Comunicaciones.
+    \item Desde 2016 al 2017, en \href{https://www.liceoraac.cl}{\textbf{LICEO R.A.A.C.}} como Profesor para las asignaturas de Redes y Comunicaciones.
     \item Desde 2003 al 2011, en \textbf{TERRAGRICOLA} como consultor Independiente, Configurando y administrando Servidores Windows/Netware/Linux. Administrando Firewall Watchguard.
+        \begin{description} 
+        \item[Tecnologías relacionadas:] \textit{Windows Server, Novell Netware, Linux, Firewall Watchguard.}
+    \end{description}
     \item Desde 2008 al 2009, en \href{https://www.uach.cl}{\textbf{UNIVERSIDAD AUSTRAL DE CHILE}} como Profesor Asistente para las asignaturas relacionadas con Ms Office en la Escuela de Medicina. Desarrollo de software.
     \begin{description} 
         \item[Tecnologías relacionadas:] \textit{Visual Studio Professional, Visual Basic .NET, Adobe FLEX.}
     \end{description}
-    \item Desde 2005 al 2006, en [INACAP](https://portal.inacap.cl) as Teacher in various subjects for Informatic Engineers in the Osorno and Puerto Montt branches.
-    \item Desde 2004 al 2005, en [UNIVERSIDAD DE LOS LAGOS](https://www.ulagos.cl) as Teacher in various courses for Informatic Engineers in the Osorno and Puerto Montt branches.
-    \item Desde 2003 al 2005, en SINGA SA as Project Leader and Senior Developer for the SIPP Project Marine Harvest Puerto Montt *(related technologies: GENEXUS/VB6.0)*.
-    \item El 2003, en INNOVA CHILE as Field Technician for ESSO Gas Stations.
-    \item El 2002, en [INACAP](https://portal.inacap.cl) as Teacher in various subjects for Informatic Engineers in Osorno branch.
-    \item Desde 2001 al 2002, en TECNOLOGICO DE LA UNIVERSIDAD DE LOS LAGOS as Teacher in various courses for Informatic Technicians.
-    \item Desde 1999 al 2002, en [TELEFONICA DEL SUR](https://telsur.cl) as Project Engineer.
-    \item Desde 1997 al 1998, en CDI DE LA UNIVERSIDAD DE LOS LAGOS as Teacher in various subjects for Informatic Engineers.
+    \item Desde 2005 al 2006, en \href{https://portal.inacap.cl}{\textbf{INACAP}} como Profesor en varias asignaturas para la carrera de Ingeniería Informática en las sedes de Osorno y Puerto Montt.
+    \item Desde 2004 al 2005, en \href{https://www.ulagos.cl}{\textbf{UNIVERSIDAD DE LOS LAGOS}} como Profesor en varias asignaturas para la carrera de Ingeniería Informática en las sedes de Osorno y Puerto Montt.
+    \item Desde 2003 al 2005, en \textbf{SINGA S.A.} como Lider de Proyecto y Desarrollador Senior para el proyecto SIPP de Marine Harvest Puerto Montt.
+    \begin{description} 
+        \item[Tecnologías relacionadas:] \textit{GENEXUS generando código Visual Basic 6.0.}
+    \end{description}
+    \item El 2003, en \textbf{INNOVA CHILE} como Técnico de campo para las estaciones de combustible ESSO.
+    \item El 2002, en \href{https://portal.inacap.cl}{\textbf{INACAP}} como Profesor en varias asignaturas para la carrera de Ingeniería Informática en la sede Osorno.
+    \item Desde 2001 al 2002, en \textbf{TECNOLÓGICO DE LA UNIVERSIDAD DE LOS LAGOS} como Profesor en varias asignaturas para la carrera de Técnico en Informática.
+    \item Desde 1999 al 2002, en \href{https://telsur.cl}{\textbf{TELEFONICA DEL SUR}} como Ingeniero de Proyectos para el Area Comercial, Zonal Osorno.
+    \item Desde 1997 al 1998, en \textbf{CDI DE LA UNIVERSIDAD DE LOS LAGOS} como Profesor en varias asignaturas la carrera de Ingeniería Informática.
 \end{itemize}
-
+\newpage
 \section{Experiencia relevante en desarrollo de software}
 \label{sec:desarrollo-section}
 \begin{itemize}
-    \item Desde 2013 al 2018, SIPOS, Software development and TRANSBANK debit/credit card terminal integration for their product INTEGRATED POS with a WEB System. Developed for VITAMINA WORK LIFE, Santiago, Chile.Position: Analyst and Developer. Tool: Visual Studio 2017, VB.NET, ASP.NET. Duties: Analysis, Design and Development.
-    \item Desde 2013 al 2018, SIDTE, Software development and Integration of MANAGER ERP and a third party Electronic Tax Document (DTE) software. Developed for SERVIMAQ S.A., Osorno, Chile.Position: Analyst and Developer. Tools: Visual Studio 2017, VB.NET, ASP.NET. Duties: Analysis, Design and Development.
-    \item Desde 2012 al 2018, SIP, System development for a blueberries packing plant, integrating static scales and third party software, ending with an autonomous system. Developed for TRUCAO BERRIES, Rio Negro, Chile. Position: Analyst and Developer. Tools: Visual Studio 2019, VB.NET, ASP.NET. Duties: Analysis, Design and Development.
-    \item Desde 2011 al 2018, KODAWARI, Development, maintenance an evolvement of a stock control and appointment keeping software for the KODAWARI certification fulfillment  for TOYOTA dealers. Developed for SERVIMAQ S.A.,Osorno, Chile. Position: Analyst and Developer. Tools: Genexus 9, VB6. Duties: Analysis, Design and Development.
-    \item Desde 2003 al 2018, SIC, Development, maintenance an evolvement of an integrated Windows/Android system for the field information collection for the blueberries harvesting, utilizing Honeywell Data Terminals, Samsung Cellphones and a Payroll System. Developed for TRUCAO BERRIES, Rio Negro, Chile. Position: Analyst and Developer. Tools: Visual Studio 2017, VB.NET, Android Studio, Java. Duties: Analysis, Design and Development.
-    \item Desde 2015 al 2016, SIRC, Development of a Windows/Android integrated system for the field information collection of petrol expenditures and its corresponding Electronic Tax Documents emitted trough a third party software. Developed for the HARR Building company, Osorno, Chile. Position: Analyst and Developer. Tools: Visual Studio 2017, VB.NET, Android Studio, Java. Duties: Analysis, Design and Development.
-    \item En el 2016, SIFLEX, Data extraction software development for the accounting balance sheet upon the data entered in FLEXLINE ERP. Developed for Salmones Caleta Bay, Osorno, Chile. Position: Analyst and Developer. Tools: Visual Studio 2017, VB.NET. Duties: Analysis, Design and Development.
-    \item Desde 2003 al 2005, SIPP,	Development for the production control software for salmon processing plants, integrating communication with static and dynamic scales, for the raw matter caliper sorting, finished product and packing registration as for the Honeywell data collecting terminals. Developed for Marine Harvest, Puerto Montt, Chile. Position: Analyst and Developer. Tools: Visual Studio 2017, VB.NET. Duties: Analysis, Design and Development.
+    \item Desde 2013 al 2018, \textbf{SIPOS}, Desarrollo de Software e Integración con terminal TRANSBANK lector de tarjetas de debito/crédito para su producto POS INTEGRADO con un sistema WEB.
+    \begin{description}
+        \item[Desarrollado para:] \textit{VITAMINA WORK LIFE, Santiago, Chile.}
+        \item[Posición:] \textit{Analista y Desarrollador.}
+        \item[Herramientas:] \textit{Visual Studio 2017, Visual Basic .NET, ASP .NET.}
+        \item[Labores:] \textit{Analisis, Diseño y Desarrollo.}
+    \end{description}    
+    \item Desde 2013 al 2018, \textbf{SIDTE}, Desarrollo de Software e Integración de ERP MANAGER con software de terceros para la emision de documentos tributarios electrónicos (DTE).
+    \begin{description}
+        \item[Desarrollado para:] \textit{SERVIMAQ S.A., Osorno, Chile.}
+        \item[Posición:] \textit{Analista y Desarrollador.}
+        \item[Herramientas:] \textit{Visual Studio 2017, Visual Basic .NET, Xml, Dte}
+        \item[Labores:] \textit{Analisis, Diseño y Desarrollo.}
+    \end{description}
+    \item Desde 2012 al 2018, \textbf{SIP}, Desarrollo de sistema para planta de empacado de arandanos, integrando balanzas/romanas estaticas y software de terceros, culminando con un sistema autonomo. 
+    \begin{description}
+        \item[Desarrollado para:] \textit{TRUCAO BERRIES, Rio Negro, Chile.}
+        \item[Posición:] \textit{Analista y Desarrollador.}
+        \item[Herramientas:] \textit{Visual Studio 2019, Visual Basic .NET, Rs-232, Tcp-Ip}
+        \item[Labores:] \textit{Analisis, Diseño y Desarrollo.}
+    \end{description}
+    \item Desde 2011 al 2018, \textbf{KODAWARI}, Desarrollo, mantenimiento y evolución de software para control de stock y agendamiento de citas para el cumplimiento de la certificación KODAWARI para concesionarios TOYOTA. 
+    \begin{description}
+        \item[Desarrollado para:] \textit{SERVIMAQ S.A.,Osorno, Chile.}
+        \item[Posición:] \textit{Analista y Desarrollador.}
+        \item[Herramientas:] \textit{Genexus 9, Visual Basic 6}
+        \item[Labores:] \textit{Analisis, Diseño y Desarrollo.}
+    \end{description}
+    \item Desde 2003 al 2018, \textbf{SIC}, Desarrollo, mantenimiento y evolución de un sistema integrado Windows/Android para la recolección de información en terreno para la cosecha de arandanos, utilizando terminales de datos Honeywell, telefonos celulares Samsung y un sistema de pago de nóminas. 
+    \begin{description}
+        \item[Desarrollado para:] \textit{TRUCAO BERRIES, Rio Negro, Chile.}
+        \item[Posición:] \textit{Analista y Desarrollador.}
+        \item[Herramientas:] \textit{Visual Studio 2017, Visual Basic .NET, Android Studio, Java, Terminales Honeywell, Windows Embedded, Teléfonos Celulares Samsung, Códigos de Barra, Códigos QR, Impresoras Zebra}
+        \item[Labores:] \textit{Analisis, Diseño y Desarrollo.}
+    \end{description}
+    \newpage
+    \item Desde 2015 al 2016, \textbf{SIRC}, Desarrollo de sistema integrado Windows/Android para la recolección de información en terreno de despachos de petroleo y la emisión del correspondiente documento tributario electrónico generado a travez de la automatización de software de terceros. 
+    \begin{description}
+        \item[Desarrollado para:] \textit{CONSTRUCTORA HARR S.A., Osorno, Chile.}
+        \item[Posición:] \textit{Analista y Desarrollador.}
+        \item[Herramientas:] \textit{Visual Studio 2017, Visual Basic .NET, Android Studio, Java, Transtecnia Contabilidad, Tcp-Ip}
+        \item[Labores:] \textit{Analisis, Diseño y Desarrollo.}
+    \end{description}
+    \item En el 2016, \textbf{SIFLEX}, Software para la extracción de datos para Balances Contables desde los datos ingresados en ERP FLEXLINE.
+    \begin{description}
+        \item[Desarrollado para:] \textit{SALMONES CALETA BAY, Osorno, Chile.}
+        \item[Posición:] \textit{Analista y Desarrollador.}
+        \item[Herramientas:] \textit{Visual Studio 2017, Visual Basic .NET, ERP Flexline}
+        \item[Labores:] \textit{Analisis, Diseño y Desarrollo.}
+    \end{description}
+    \item Desde 2003 al 2005, \textbf{SIPP}, Desarrollo para software de control de producción de plantas de proceso de salmón, integrando comunicación con balanzas estaticas y dinamicas, para el calibrado de materia prima, producto terminado y registro de embalajes asi como para los terminales de recolección de datos Honeywell. 
+    \begin{description}
+        \item[Desarrollado para:] \textit{MARINE HARVEST, Puerto Montt, Chile.}
+        \item[Posición:] \textit{Analista y Desarrollador.}
+        \item[Herramientas:] \textit{Genexus 9, Visual Basic 6, Rs-232, Terminales Honeywell, Windows Embedded, Codigos de Barra, Impresoras Zebra}
+        \item[Labores:] \textit{Analisis, Diseño y Desarrollo.}
+    \end{description}
 \end{itemize}
-
-\newpage
-This is page 2.
-%\fancyheadwidth[C]{0.9\headwidth}
 \end{document}
