Minimas correcciones y ajustes

--- a/Spanish.tex
+++ b/Spanish.tex
@@ -48,6 +48,7 @@
 \begin{document}
 \pagestyle{fancy}           % Set the page style to "fancy"...
 \fancyhead{}                % clear all header fields
+\fancyfoot{}                % clear all footer fields
 \fancyhead[C]{
     \colorbox{lightgray}{%
         \parbox{0.98\headwidth}{
@@ -58,7 +59,7 @@
             \hrule height 2pt
             \vspace{2mm}
             \textbf{Ingeniero Electrónico de la Universidad Técnica Federico Santa María.}\\
-            \textbf{Contador Auditor de la Universidad Tecnológica de Chile INACAP.}\\
+            \textbf{Contador Auditor de la Universidad Tecnológica de Chile, INACAP.}\\
             \vspace{2mm}
             \hrule
             \vspace{1mm}
@@ -67,15 +68,14 @@
         }
     }%
 }
-\fancyfoot{}              % clear all footer fields
-\fancyfoot[R]{\thepage}.  % footer for the right side
+\fancyfoot[R]{\thepage} % footer for the right side
 \fancyfoot[L]{Jorge Henríquez Tolhuysen, \today, creado con \LaTeX} % footer for the left side
 
 \section{Estudios/Educación}
 \label{sec:estudios-section}
 \begin{itemize}
     \item Desde 1989 al 1994, \textbf{Ingeniería Electrónica}, título obtenido en la \href{https://www.usm.cl}{\textbf{Universidad Técnica Federico Santa María}} en Valparaiso, Chile, Ayudante para las asignaturas de Programación de Computadores en Pascal y Telefonía.
-    \item Desde 2013 al 2016, \textbf{Contabilidad y Auditoría}, Todas las asignaturas aprobadas, sin titulación, práctica profesional realizada fuera de plazo, en la \href{https://www.inacap.cl}{\textbf{Universidad Tecnológica de Chile INACAP}}, dos años consecutivos reconocido como el mejor estudiante del área de administración y negocios.
+    \item Desde 2013 al 2016, \textbf{Contabilidad y Auditoría}, Todas las asignaturas aprobadas, sin titulación, práctica profesional realizada fuera de plazo, estudios realizados en la \href{https://www.inacap.cl}{\textbf{Universidad Tecnológica de Chile, INACAP}}, dos años consecutivos reconocido como el mejor estudiante del área de administración y negocios.
 \end{itemize}
 
 \section{Certificaciones}
@@ -144,61 +144,69 @@
 \section{Experiencia relevante en desarrollo de software}
 \label{sec:desarrollo-section}
 \begin{itemize}
-    \item Desde 2013 al 2018, \textbf{SIPOS}, Desarrollo de Software e Integración con terminal TRANSBANK lector de tarjetas de debito/crédito para su producto POS INTEGRADO con un sistema WEB.
+    \item Desde 2013 al 2018, Desarrollo de Software e Integración con terminal TRANSBANK lector de tarjetas de debito/crédito para su producto POS INTEGRADO con un sistema WEB.
     \begin{description}
+        \item[Nombre del Software:] \textbf{SIPOS.}
         \item[Desarrollado para:] \textit{VITAMINA WORK LIFE, Santiago, Chile.}
         \item[Posición:] \textit{Analista y Desarrollador.}
         \item[Herramientas:] \textit{Visual Studio 2017, Visual Basic .NET, ASP .NET.}
         \item[Labores:] \textit{Analisis, Diseño y Desarrollo.}
     \end{description}    
-    \item Desde 2013 al 2018, \textbf{SIDTE}, Desarrollo de Software e Integración de ERP MANAGER con software de terceros para la emision de documentos tributarios electrónicos (DTE).
+    \item Desde 2013 al 2018, Desarrollo de Software e Integración de ERP MANAGER con software de terceros para la emision de documentos tributarios electrónicos (DTE).
     \begin{description}
+        \item[Nombre del Software:] \textbf{SIDTE.}
         \item[Desarrollado para:] \textit{SERVIMAQ S.A., Osorno, Chile.}
         \item[Posición:] \textit{Analista y Desarrollador.}
         \item[Herramientas:] \textit{Visual Studio 2017, Visual Basic .NET, Xml, Dte}
         \item[Labores:] \textit{Analisis, Diseño y Desarrollo.}
     \end{description}
-    \item Desde 2012 al 2018, \textbf{SIP}, Desarrollo de sistema para planta de empacado de arandanos, integrando balanzas/romanas estaticas y software de terceros, culminando con un sistema autonomo. 
+    \item Desde 2012 al 2018, Desarrollo de sistema para planta de empacado de arandanos, integrando balanzas/romanas estaticas y software de terceros, culminando con un sistema autonomo. 
     \begin{description}
+        \item[Nombre del Software:] \textbf{SIP.}
         \item[Desarrollado para:] \textit{TRUCAO BERRIES, Rio Negro, Chile.}
         \item[Posición:] \textit{Analista y Desarrollador.}
         \item[Herramientas:] \textit{Visual Studio 2019, Visual Basic .NET, Rs-232, Tcp-Ip}
         \item[Labores:] \textit{Analisis, Diseño y Desarrollo.}
     \end{description}
-    \item Desde 2011 al 2018, \textbf{KODAWARI}, Desarrollo, mantenimiento y evolución de software para control de stock y agendamiento de citas para el cumplimiento de la certificación KODAWARI para concesionarios TOYOTA. 
+    \item Desde 2011 al 2018, Desarrollo, mantenimiento y evolución de software para control de stock y agendamiento de citas para el cumplimiento de la certificación KODAWARI para concesionarios TOYOTA. 
     \begin{description}
+        \item[Nombre del Software:] \textbf{KODAWARI.}
         \item[Desarrollado para:] \textit{SERVIMAQ S.A.,Osorno, Chile.}
         \item[Posición:] \textit{Analista y Desarrollador.}
         \item[Herramientas:] \textit{Genexus 9, Visual Basic 6}
         \item[Labores:] \textit{Analisis, Diseño y Desarrollo.}
     \end{description}
-    \item Desde 2003 al 2018, \textbf{SIC}, Desarrollo, mantenimiento y evolución de un sistema integrado Windows/Android para la recolección de información en terreno para la cosecha de arandanos, utilizando terminales de datos Honeywell, telefonos celulares Samsung y un sistema de pago de nóminas. 
+    \item Desde 2003 al 2018, Desarrollo, mantenimiento y evolución de un sistema integrado Windows/Android para la recolección de información en terreno para la cosecha de arandanos, utilizando terminales de datos Honeywell, telefonos celulares Samsung y un sistema de pago de nóminas. 
     \begin{description}
+        \item[Nombre del Software:] \textbf{SIC.}
         \item[Desarrollado para:] \textit{TRUCAO BERRIES, Rio Negro, Chile.}
         \item[Posición:] \textit{Analista y Desarrollador.}
         \item[Herramientas:] \textit{Visual Studio 2017, Visual Basic .NET, Android Studio, Java, Terminales Honeywell, Windows Embedded, Teléfonos Celulares Samsung, Códigos de Barra, Códigos QR, Impresoras Zebra}
         \item[Labores:] \textit{Analisis, Diseño y Desarrollo.}
     \end{description}
     \newpage
-    \item Desde 2015 al 2016, \textbf{SIRC}, Desarrollo de sistema integrado Windows/Android para la recolección de información en terreno de despachos de petroleo y la emisión del correspondiente documento tributario electrónico generado a travez de la automatización de software de terceros. 
+    \item Desde 2015 al 2016, Desarrollo de sistema integrado Windows/Android para la recolección de información en terreno de despachos de petroleo y la emisión del correspondiente documento tributario electrónico generado a travez de la automatización de software de terceros. 
     \begin{description}
+        \item[Nombre del Software:] \textbf{SIRC.}
         \item[Desarrollado para:] \textit{CONSTRUCTORA HARR S.A., Osorno, Chile.}
         \item[Posición:] \textit{Analista y Desarrollador.}
         \item[Herramientas:] \textit{Visual Studio 2017, Visual Basic .NET, Android Studio, Java, Transtecnia Contabilidad, Tcp-Ip}
         \item[Labores:] \textit{Analisis, Diseño y Desarrollo.}
     \end{description}
-    \item En el 2016, \textbf{SIFLEX}, Software para la extracción de datos para Balances Contables desde los datos ingresados en ERP FLEXLINE.
+    \item En el 2016, Software para la extracción de datos para Balances Contables desde los datos ingresados en ERP FLEXLINE.
     \begin{description}
+        \item[Nombre del Software:] \textbf{SIFLEX.}
         \item[Desarrollado para:] \textit{SALMONES CALETA BAY, Osorno, Chile.}
         \item[Posición:] \textit{Analista y Desarrollador.}
         \item[Herramientas:] \textit{Visual Studio 2017, Visual Basic .NET, ERP Flexline}
         \item[Labores:] \textit{Analisis, Diseño y Desarrollo.}
     \end{description}
-    \item Desde 2003 al 2005, \textbf{SIPP}, Desarrollo para software de control de producción de plantas de proceso de salmón, integrando comunicación con balanzas estaticas y dinamicas, para el calibrado de materia prima, producto terminado y registro de embalajes asi como para los terminales de recolección de datos Honeywell. 
+    \item Desde 2003 al 2005, Desarrollo para software de control de producción de plantas de proceso de salmón, integrando comunicación con balanzas estáticas y dinámicas, para el calibrado de materia prima, producto términado y registro de embalajes, asi como para los terminales de recolección de datos Honeywell. 
     \begin{description}
+        \item[Nombre del Software:] \textbf{SIPP.}
         \item[Desarrollado para:] \textit{MARINE HARVEST, Puerto Montt, Chile.}
         \item[Posición:] \textit{Analista y Desarrollador.}
-        \item[Herramientas:] \textit{Genexus 9, Visual Basic 6, Rs-232, Terminales Honeywell, Windows Embedded, Codigos de Barra, Impresoras Zebra}
+        \item[Herramientas:] \textit{Genexus 9, Visual Basic 6, Rs-232, Terminales Honeywell, Windows Embedded, Códigos de Barra, Impresoras Zebra}
         \item[Labores:] \textit{Analisis, Diseño y Desarrollo.}
     \end{description}
 \end{itemize}
