Incorporacion de keywords para pdf

--- a/Spanish.tex
+++ b/Spanish.tex
@@ -9,7 +9,8 @@
         Jorge Henríquez, 
         Estudios, 
         Experiencia,
-        Sistemas Desarrollados, 
+        Sistemas Desarrollados,
+        Lenguajes de programación, 
         Java, 
         Visual Basic 6.0, 
         Visual Basic .Net, 
