Incorpora liderazgo en labores de desarrollo

--- a/Spanish.tex
+++ b/Spanish.tex
@@ -208,7 +208,7 @@
         \item[Desarrollado para:] \textit{MARINE HARVEST, Puerto Montt, Chile.}
         \item[Posición:] \textit{Analista y Desarrollador.}
         \item[Herramientas:] \textit{Genexus 9, Visual Basic 6, Rs-232, Terminales Honeywell, Windows Embedded, Códigos de Barra, Impresoras Zebra}
-        \item[Labores:] \textit{Analisis, Diseño y Desarrollo.}
+        \item[Labores:] \textit{Liderazgo, Analisis, Diseño y Desarrollo.}
     \end{description}
 \end{itemize}
 \end{document}
