Se incorporan competencias y caracteristicas

--- a/Spanish.tex
+++ b/Spanish.tex
@@ -72,6 +72,14 @@
 \fancyfoot[R]{\thepage} % footer for the right side
 \fancyfoot[L]{Jorge Henríquez Tolhuysen, \today, creado con \LaTeX} % footer for the left side
 
+\section{Competencias Técnicas}
+\label{sec:competencias-section}
+Instalacion y configuracion de S.O. de Escritorio y Servidores, Configuracion de Redes y servicios relacionados, Manejo Avanzado de TCP/IP, Desarrollo de Sistemas en diversos Lenguajes de Programación.
+
+\section{Caracteristicas Personales}
+\label{sec:caracteristicas-section}
+Leal, Analitico, Proactivo, Riguroso, Gentil, Alta Motivacion por el Trabajo, Cooperador, Seguro, Altamente adaptable al cambio, Aprendizaje rápido.
+
 \section{Estudios/Educación}
 \label{sec:estudios-section}
 \begin{itemize}
@@ -100,6 +108,7 @@
     \begin{description} 
         \item[Tecnologías relacionadas:] \textit{Visual Studio Professional 2022, Integración con Excel, C\#}.
     \end{description}
+    \newpage
     \item Desde 2021 al 2024, en \href{https://www.khipu.com}{\textbf{KHIPU S.p.A.}} como Ingeniero de Software Senior en area backend.
     \begin{description} 
         \item[Tecnologías relacionadas:] \textit{IntelliJ, Java, Postgresql, Bitbucket, Git, Terraform, IBM Cloud, Docker.}
@@ -136,12 +145,13 @@
         \item[Tecnologías relacionadas:] \textit{GENEXUS generando código Visual Basic 6.0.}
     \end{description}
     \item El 2003, en \textbf{INNOVA CHILE} como Técnico de campo para las estaciones de combustible ESSO.
+    \newpage
     \item El 2002, en \href{https://portal.inacap.cl}{\textbf{INACAP}} como Profesor en varias asignaturas para la carrera de Ingeniería Informática en la sede Osorno.
     \item Desde 2001 al 2002, en \textbf{TECNOLÓGICO DE LA UNIVERSIDAD DE LOS LAGOS} como Profesor en varias asignaturas para la carrera de Técnico en Informática.
     \item Desde 1999 al 2002, en \href{https://telsur.cl}{\textbf{TELEFONICA DEL SUR}} como Ingeniero de Proyectos para el Area Comercial, Zonal Osorno.
     \item Desde 1997 al 1998, en \textbf{CDI DE LA UNIVERSIDAD DE LOS LAGOS} como Profesor en varias asignaturas la carrera de Ingeniería Informática.
 \end{itemize}
-\newpage
+
 \section{Experiencia relevante en desarrollo de software}
 \label{sec:desarrollo-section}
 \begin{itemize}
@@ -169,6 +179,7 @@
         \item[Herramientas:] \textit{Visual Studio 2022, C\#, Excel.}
         \item[Labores:] \textit{Análisis, Diseño y Desarrollo.}
     \end{description}
+    \newpage
     \item Desde 2013 al 2018, Desarrollo de Software e Integración con terminal TRANSBANK lector de tarjetas de debito/crédito para su producto POS INTEGRADO con un sistema WEB.
     \begin{description}
         \item[Nombre del Software:] \textbf{SIPOS.}
@@ -201,6 +212,7 @@
         \item[Herramientas:] \textit{Genexus 9, Visual Basic 6}
         \item[Labores:] \textit{Análisis, Diseño y Desarrollo.}
     \end{description}
+    \newpage
     \item Desde 2003 al 2018, Desarrollo, mantenimiento y evolución de un sistema integrado Windows/Android para la recolección de información en terreno para la cosecha de arandanos, utilizando terminales de datos Honeywell, telefonos celulares Samsung y un sistema de pago de nóminas. 
     \begin{description}
         \item[Nombre del Software:] \textbf{SIC.}
@@ -209,7 +221,6 @@
         \item[Herramientas:] \textit{Visual Studio 2017, Visual Basic .NET, Android Studio, Java, Terminales Honeywell, Windows Embedded, Teléfonos Celulares Samsung, Códigos de Barra, Códigos QR, Impresoras Zebra}
         \item[Labores:] \textit{Análisis, Diseño y Desarrollo.}
     \end{description}
-    \newpage
     \item Desde 2015 al 2016, Desarrollo de sistema integrado Windows/Android para la recolección de información en terreno de despachos de petroleo y la emisión del correspondiente documento tributario electrónico generado a travez de la automatización de software de terceros. 
     \begin{description}
         \item[Nombre del Software:] \textbf{SIRC.}
