Agrega tildes faltantes

--- a/Spanish.tex
+++ b/Spanish.tex
@@ -74,11 +74,11 @@
 
 \section{Competencias Técnicas}
 \label{sec:competencias-section}
-Instalacion y configuracion de S.O. de Escritorio y Servidores, Configuracion de Redes y servicios relacionados, Manejo Avanzado de TCP/IP, Desarrollo de Sistemas en diversos Lenguajes de Programación.
+Instalación y configuración de S.O. de Escritorio y Servidores, Configuración de Redes y servicios relacionados, Manejo Avanzado de TCP/IP, Desarrollo de Sistemas en diversos Lenguajes de Programación.
 
 \section{Caracteristicas Personales}
 \label{sec:caracteristicas-section}
-Leal, Analitico, Proactivo, Riguroso, Gentil, Alta Motivacion por el Trabajo, Cooperador, Seguro, Altamente adaptable al cambio, Aprendizaje rápido.
+Leal, Analítico, Proactivo, Riguroso, Gentil, Alta Motivación por el Trabajo, Cooperador, Seguro, Altamente adaptable al cambio, Aprendizaje rápido.
 
 \section{Estudios/Educación}
 \label{sec:estudios-section}
