Nueva experiencia laboral

--- a/Spanish.tex
+++ b/Spanish.tex
@@ -96,6 +96,10 @@ Leal, Analítico, Proactivo, Riguroso, Gentil, Alta Motivación por el Trabajo, 
 \section{Experiencia Laboral}
 \label{sec:laboral-section}
 \begin{itemize}
+    \item 2026, en \textbf{ALVAREZ \& ASOCIADOS S.p.A.} como Consultor Independiente, Migra aplicación para el Escritorio de Windows, escrita en C\#, con .Net Framework 4.78 y usando Windows Forms a versión con .Net 8, WinUi 3.
+    \begin{description}
+        \item[Tecnologías relacionadas:] \textit{Visual Studio Professional 2026, C\#, .Net 8.0, WinUI 3, Html, Javascript, Css.}
+    \end{description}
     \item Desde 2021 al 2025, en \href{https://www.get-fm.de}{\textbf{FACILITY CONSULTANTS GmbH}} como Consultor Independiente, Desarrolló una Clase PHP que toma un Archivo AutoCAD 2D DWG y genera código SVG. Programó una Libreria JavaScript que acepta un archivo BIM y produce un renderizado 3D del mismo, ambas son usadas en el mismo sitio web.
     \begin{description}
         \item[Tecnologías relacionadas:] \textit{Visual Studio Code, Php, Javascript, Typescript, Tailwindcss, Threejs.}
@@ -104,11 +108,11 @@ Leal, Analítico, Proactivo, Riguroso, Gentil, Alta Motivación por el Trabajo, 
     \begin{description}
         \item[Tecnologías relacionadas:] \textit{Visual Studio Professional 2022, Webscraping, C\#.}
     \end{description}
+    \newpage
     \item Desde 2021 al 2025, en \href{https://stratex.cl}{\textbf{STRATEX CONSULTORES}} como Consultor Independiente, Programó un Complemento Excel, escrito en C\#, para Importar y Fusionar Archivos de Texto de manera desatendida.
     \begin{description} 
         \item[Tecnologías relacionadas:] \textit{Visual Studio Professional 2022, Integración con Excel, C\#}.
     \end{description}
-    \newpage
     \item Desde 2021 al 2024, en \href{https://www.khipu.com}{\textbf{KHIPU S.p.A.}} como Ingeniero de Software Senior en area backend.
     \begin{description} 
         \item[Tecnologías relacionadas:] \textit{IntelliJ, Java, Postgresql, Bitbucket, Git, Terraform, IBM Cloud, Docker.}
@@ -144,8 +148,8 @@ Leal, Analítico, Proactivo, Riguroso, Gentil, Alta Motivación por el Trabajo, 
     \begin{description} 
         \item[Tecnologías relacionadas:] \textit{GENEXUS generando código Visual Basic 6.0.}
     \end{description}
-    \item El 2003, en \textbf{INNOVA CHILE} como Técnico de campo para las estaciones de combustible ESSO.
     \newpage
+    \item El 2003, en \textbf{INNOVA CHILE} como Técnico de campo para las estaciones de combustible ESSO.
     \item El 2002, en \href{https://portal.inacap.cl}{\textbf{INACAP}} como Profesor en varias asignaturas para la carrera de Ingeniería Informática en la sede Osorno.
     \item Desde 2001 al 2002, en \textbf{TECNOLÓGICO DE LA UNIVERSIDAD DE LOS LAGOS} como Profesor en varias asignaturas para la carrera de Técnico en Informática.
     \item Desde 1999 al 2002, en \href{https://telsur.cl}{\textbf{TELEFONICA DEL SUR}} como Ingeniero de Proyectos para el Area Comercial, Zonal Osorno.
@@ -155,6 +159,14 @@ Leal, Analítico, Proactivo, Riguroso, Gentil, Alta Motivación por el Trabajo, 
 \section{Experiencia relevante en desarrollo de software}
 \label{sec:desarrollo-section}
 \begin{itemize}
+    \item En el 2026, Migra aplicación escrita en C\#, usando .Net Framework 4.78 y Windows Forms a .Net 8.0 y WinUI 3.
+    \begin{description}
+        \item[Nombre del Software:] \textbf{SICE.NEXT.}
+        \item[Desarrollado para:] \textit{ALVAREZ \& ASOCIADOS S.p.A., Osorno, Chile.}
+        \item[Posición:] \textit{Analista y Desarrollador.}
+        \item[Herramientas:] \textit{Visual Studio 2026, C\#, .Net 8.0, WinUI 3, WebView, Excel, Ceres ERP.}
+        \item[Labores:] \textit{Análisis, Diseño y Desarrollo.}
+    \end{description}
     \item Desde 2021 al 2025, Desarrollo de clase Php para la conversión de archivos Autocad DWG a datos SVG, Desarrollo de libreria Javascript para la conversión de archivos BIM a formato IFC y su posterior renderizado 3D.
     \begin{description}
         \item[Nombre del Software:] \textbf{GETFM.}
@@ -171,6 +183,7 @@ Leal, Analítico, Proactivo, Riguroso, Gentil, Alta Motivación por el Trabajo, 
         \item[Herramientas:] \textit{Visual Studio 2022, C\#, Excel, Ceres ERP.}
         \item[Labores:] \textit{Análisis, Diseño y Desarrollo.}
     \end{description}
+    \newpage
     \item Desde 2021 al 2025, Desarrollo de complemento para Excel que permite importar Libros de Compras, Ventas y Honorarios generados por SAP.  
     \begin{description}
         \item[Nombre del Software:] \textbf{EXAISTRATEX.}
@@ -179,7 +192,6 @@ Leal, Analítico, Proactivo, Riguroso, Gentil, Alta Motivación por el Trabajo, 
         \item[Herramientas:] \textit{Visual Studio 2022, C\#, Excel.}
         \item[Labores:] \textit{Análisis, Diseño y Desarrollo.}
     \end{description}
-    \newpage
     \item Desde 2013 al 2018, Desarrollo de Software e Integración con terminal TRANSBANK lector de tarjetas de debito/crédito para su producto POS INTEGRADO con un sistema WEB.
     \begin{description}
         \item[Nombre del Software:] \textbf{SIPOS.}
