Corrige typo en nueva experiencia laboral

--- a/Spanish.tex
+++ b/Spanish.tex
@@ -96,7 +96,7 @@ Leal, Analítico, Proactivo, Riguroso, Gentil, Alta Motivación por el Trabajo, 
 \section{Experiencia Laboral}
 \label{sec:laboral-section}
 \begin{itemize}
-    \item 2026, en \textbf{ALVAREZ \& ASOCIADOS S.p.A.} como Consultor Independiente, Migra aplicación para el Escritorio de Windows, escrita en C\#, con .Net Framework 4.78 y usando Windows Forms a versión con .Net 8, WinUi 3.
+    \item 2026, en \textbf{ALVAREZ \& ASOCIADOS S.p.A.} como Consultor Independiente, Migra aplicación para el Escritorio de Windows, escrita en C\#, con .Net Framework 4.78 y usando Windows Forms a versión con .Net 8.0 y WinUi 3.
     \begin{description}
         \item[Tecnologías relacionadas:] \textit{Visual Studio Professional 2026, C\#, .Net 8.0, WinUI 3, Html, Javascript, Css.}
     \end{description}
